--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "periodic-table-interactive",
+  "name": "tabela-periodica-interativa",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
